@@ -277,3 +277,10 @@ holdconnectionopen = no
 # are not both set.
 
 # keepalive = 60
+
+# You can specify the "path separator character" used for your Maildir
+# folders.  This is inserted in-between the components of the tree.
+# It defaults to ".".  If you want your Maildir folders to be nested,
+# set it to "/".
+
+sep = .
