@@ -10,6 +10,9 @@ offlineimap (3.2.2) unstable; urgency=low
   * If a given Maildir folder is new, remove the associated local status
     cache file, if any.  That way, there will not be any chance of
     propogating hordes of deletes and adds based on old status data.
+  * Added support for /-separated Maildirs -- that is, hierarchical
+    Maildir trees.  Fixes [complete.org #28] and, for Debian,
+    Closes: #155460.
 
  -- John Goerzen <jgoerzen@complete.org>  Thu, 25 Jul 2002 08:22:25 -0500
 
